--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,22 @@
 {
-	"compilerOptions": {
-		"target": "ES2022", 
-		"module": "CommonJS",
-		"moduleResolution": "Node",
-		"types": ["node", "@playwright/test"],
-		"lib": ["ES2022", "DOM"],
-		"strict": true,
-		"noEmit": true,
-		"skipLibCheck": true,
-		"resolveJsonModule": true,
-		"esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "baseUrl": ".",
-        "paths": {
-          "@/tests/*": ["tests/*"]
-        }
-    },
-	"include": ["tests/**/*.ts"]
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "types": ["node", "@playwright/test"],
+    "lib": ["ES2022", "DOM"],
+    "strict": true,
+    "noEmit": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/tests/*": ["tests/*"],
+      "@/fixtures/*": ["fixtures/*"],
+      "@/utils/*": ["utils/*"]
+    }
+  },
+  "include": ["tests/**/*.ts", "fixtures/**/*.ts", "utils/**/*.ts"]
 }
